<resources>
    <string name="app_name">Formulario de registro</string>
    <string name="registro">Formulario de Registro</string>
    <string name="loggin">Loggin</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="password">Password</string>
    <string name="pass">Contraseña</string>
    <string name="confirma">Confirmar Password</string>
    <string name="confirm">Repetir Password</string>
    <string name="confir">Contraseña</string>
    <string name="correo">Correo electrónico</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="ciudad">Lugar de Nacimiento</string>
    <string name="bailar">Bailar</string>
    <string name="dormir">Dormir</string>
    <string name="leer">Leer</string>
    <string name="cantar">Cantar</string>
    <string name="aceptar">Aceptar</string>
    <string name="fech">Fecha de Nacimiento</string>
    <string name="user">User</string>

    <string-array name="ciudades">
        <item>Arauca</item>
        <item>Armenia</item>
        <item>Barranquilla</item>
        <item>Bogotá</item>
        <item>Bucaramanga</item>
        <item>Cali</item>
        <item>Cartagena</item>
        <item>Cúcuta</item>
        <item>Florencia</item>
        <item>Ibagué</item>
        <item>Inírida</item>
        <item>Leticia</item>
        <item>Manizales</item>
        <item>Medellin</item>
        <item>Mitú</item>
        <item>Mocoa</item>
        <item>Montería</item>
        <item>Neiva</item>
        <item>Pasto</item>
        <item>Pereira</item>
        <item>Popayán</item>
        <item>Puerto Carreño</item>
        <item>Quibdó</item>
        <item>Riohacha</item>
        <item>San Andrés</item>
        <item>San José del Guaviare</item>
        <item>Santa Marta</item>
        <item>Sincelejo</item>
        <item>Tunja</item>
        <item>Valledupar</item>
        <item>Villavicencio</item>
        <item>Yopal</item>
    </string-array>
</resources>
